# AgentProbe

./: .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  railway.toml  requirements.txt
backend/agent/: core.py  logger.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users.py  003_add_custom_tools_prompts_memory.py
backend/data/: benchmark_cases.json
backend/src/agentprobe/: __init__.py
backend/src/agentprobe/application/: __init__.py
backend/src/agentprobe/application/schemas/: __init__.py  analytics.py  benchmarks.py  requests.py  responses.py
backend/src/agentprobe/application/services/: __init__.py  analytics.py  auth.py  eval_harness.py  exporter.py  orchestrator.py  parser.py  scoring.py  seeder.py
backend/src/agentprobe/domain/: __init__.py
backend/src/agentprobe/domain/entities/: __init__.py  benchmark.py  custom_tool.py  failure.py  memory.py  prompt_template.py  run.py  step.py  user.py
backend/src/agentprobe/infrastructure/: __init__.py  config.py
backend/tests/: conftest.py
backend/tests/api/: test_analytics.py  test_benchmarks.py  test_health.py  test_validation.py
backend/tests/integration/: test_benchmark_repository.py  test_repository.py
backend/tests/unit/: test_analytics.py  test_anthropic_provider.py  test_auth.py  test_entities.py  test_google_provider.py  test_openai_provider.py  test_parser.py  test_rate_limiter.py  test_scoring.py  test_seeder.py  test_tools.py
(+106 files in other folders)
